--- a/src/main/content/Assets/userAssets/Robot_2025Alpha/config.json
+++ b/src/main/content/Assets/userAssets/Robot_2025Alpha/config.json
@@ -15,5 +15,57 @@
 		}], 
 	"position": [0, 0, 0], 
 	"cameras": [],
-	"components": [] 
+	"components": [
+		{
+			"zeroedRotations": [
+				{
+					"axis": "x",
+					"degrees": 90
+				},
+				{
+					"axis": "y",
+					"degrees": 0
+				},
+				{
+					"axis": "z",
+					"degrees": 0
+				}
+			],
+			"zeroedPosition": [0, 0, 0]
+		},
+		{
+			"zeroedRotations": [
+				{
+					"axis": "x",
+					"degrees": 90
+				},
+				{
+					"axis": "y",
+					"degrees": 0
+				},
+				{
+					"axis": "z",
+					"degrees": 0
+				}
+			],
+			"zeroedPosition": [0, 0, 0]
+		},
+		{
+			"zeroedRotations": [
+				{
+					"axis": "x",
+					"degrees": 90
+				},
+				{
+					"axis": "y",
+					"degrees": 0
+				},
+				{
+					"axis": "z",
+					"degrees": 0
+				}
+			],
+			"zeroedPosition": [0, 0, 0]
+		}
+	] 
   }
