working pivit AdScope sim, but elevator sim logic has some flaws

--- a/src/main/content/Assets/userAssets/Robot_2025Alpha/config.json
+++ b/src/main/content/Assets/userAssets/Robot_2025Alpha/config.json
@@ -66,6 +66,23 @@
 				}
 			],
 			"zeroedPosition": [0, 0, 0]
+		},
+		{
+			"zeroedRotations": [
+				{
+					"axis": "x",
+					"degrees": -90
+				},
+				{
+					"axis": "y",
+					"degrees": 180
+				},
+				{
+					"axis": "z",
+					"degrees": 90
+				}
+			],
+			"zeroedPosition": [0,0,0]
 		}
 	] 
   }
