idk whats wrong with our path

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,18 +1,20 @@
 {
-  "robotWidth": 0.9,
-  "robotLength": 0.9,
+  "robotWidth": 0.9017,
+  "robotLength": 0.9017,
   "holonomicMode": true,
   "pathFolders": [
-    "Curvy Square",
     "Clear Algae",
+    "Curvy Square",
+    "Processor Side",
     "ScoreFromTop",
     "Square"
   ],
   "autoFolders": [
+    "Processor Side",
     "ScoreFromTop"
   ],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 2.0,
+  "defaultMaxVel": 2.0,
+  "defaultMaxAccel": 1.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
@@ -25,14 +27,14 @@
   "driveMotorType": "krakenX60",
   "driveCurrentLimit": 70.0,
   "wheelCOF": 1.4,
-  "flModuleX": 0.271,
-  "flModuleY": 0.271,
-  "frModuleX": 0.271,
-  "frModuleY": -0.271,
-  "blModuleX": -0.271,
-  "blModuleY": 0.271,
-  "brModuleX": -0.271,
-  "brModuleY": -0.271,
+  "flModuleX": 0.288925,
+  "flModuleY": 0.288925,
+  "frModuleX": 0.288925,
+  "frModuleY": -0.288925,
+  "blModuleX": -0.288925,
+  "blModuleY": 0.288925,
+  "brModuleX": -0.288925,
+  "brModuleY": -0.288925,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
