--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,17 +4,19 @@
   "holonomicMode": true,
   "pathFolders": [
     "Clear Algae",
+    "Barge Side",
     "Curvy Square",
     "Processor Side",
     "ScoreFromTop",
     "Square"
   ],
   "autoFolders": [
+    "Barge Side",
     "Processor Side",
     "ScoreFromTop"
   ],
   "defaultMaxVel": 2.0,
-  "defaultMaxAccel": 1.0,
+  "defaultMaxAccel": 2.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
